lab1/test/fails/odd_beginning_address_err3.asm
	.ORIG x3001
	ADD R0, R0, #5
	HALT
